# proto-spa

./: .gitignore  Cargo.toml  config.toml  scratch.rs  sh_build.sh
public/: index.html
src/: helper.rs  lib.rs  main.rs  seeding.rs
src/routes/: login.rs  register.rs
src/structs/: config.rs  user.rs
ui/: .editorconfig  index.html  package-lock.json  package.json  vite.config.js
ui/src/: index.css  index.jsx
ui/src/api/: index.js
ui/src/components/: editor.jsx
ui/src/pages/: admin.jsx  admin_index.jsx  login.jsx  user.jsx  user_index.jsx
