[package]
name = "server"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9" }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors", "trace", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
flexi_logger = { version = "0.31.8", features = ["async"] }
toml = { version = "0.8.8" }
mongodb = { version = "2.7.1" }
bcrypt = { version = "0.15.1" }
jsonwebtoken = { version = "9.3.0" }
log = "0.4"